objects/test__c.object
<CustomObject>
    <fields>
        <fullName>project1__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>project1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project2__c</fullName>
        <formula>project1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>project2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project3__c</fullName>
        <formula>project2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>project3</label>
        <type>Text</type>
    </fields>
    <label>test</label>
    <nameField>
        <label>project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>